@@ -7,9 +7,10 @@ from product.models import Category, CategoryTranslation, CategoryImage, Categor
                                    CustomProduct, CustomTextField, CustomTextFieldTranslation, ConfigurableProduct, \
                                    DownloadableProduct, SubscriptionProduct, Trial, ProductVariation, ProductAttribute, \
                                    Price, ProductImage, ProductImageTranslation, default_weight_unit, \
-                                   default_dimension_unit, ProductTranslation, Discount, TaxClass
+                                   default_dimension_unit, ProductTranslation, Discount, TaxClass, AttributeOption
 from satchmo_utils.thumbnail.field import ImageWithThumbnailField
 from satchmo_utils.thumbnail.widgets import AdminImageWithThumbnailWidget
+import re
 
 class CategoryTranslation_Inline(admin.StackedInline):
     model = CategoryTranslation
@@ -56,9 +57,41 @@ class Trial_Inline(admin.StackedInline):
     model = Trial
     extra = 2
 
+class ProductAttributeForm(models.ModelForm):
+    
+    def clean_validation(self):
+        validation = self.cleaned_data['validation']
+        try:
+            re.compile(validation)
+        except:
+            raise ValidationError(_("Invalid regular expression"))
+        return validation
+        
+
+class ProductAttributeAdmin(admin.ModelAdmin):
+    form = ProductAttributeForm
+    prepopulated_fields = {"name": ("description",)}
+    
+
+class ProductAttributeInlineForm(models.ModelForm):
+    
+    def clean_value(self):
+        value = self.cleaned_data['value']
+        attribute = self.cleaned_data['option']
+        product = self.cleaned_data['product']
+        function_name = attribute.validation.split('.')[-1]
+        import_name = '.'.join(attribute.validation.split('.')[:-1])
+        import_module = __import__(import_name, fromlist=[function_name])
+        validation_function = getattr(import_module, function_name)
+        success, valid_value = validation_function(value, product)
+        if not success:
+            raise ValidationError(attribute.error_message)
+        return valid_value
+
 class ProductAttribute_Inline(admin.TabularInline):
     model = ProductAttribute
-    extra = 1
+    extra = 2
+    form = ProductAttributeInlineForm
 
 class Price_Inline(admin.TabularInline):
     model = Price
@@ -237,5 +270,6 @@ admin.site.register(DownloadableProduct)
 admin.site.register(SubscriptionProduct, SubscriptionProductOptions)
 admin.site.register(ProductVariation, ProductVariationOptions)
 admin.site.register(TaxClass)
+admin.site.register(AttributeOption, ProductAttributeAdmin)
 #admin.site.register(ProductImage, ProductImageOptions)
 
